hphp/hack/test/typecheck/array/safe_vector_array/disallow_darray_with_wrong_key_type_where_varray_or_darray_is_required.php
<?hh

function test1(): varray_or_darray<int> {
  return darray[true => 0]; // error
}

function test2(bool $x): varray_or_darray<int, int> {
  if ($x) {
    return darray['foo' => 0]; // error
  } else {
    return darray[0 => 0]; // ok
  }
}
